--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <label for="cmac-key">Key <sup>1</sup>:</label> <input id="cmac-key-type" type="checkbox" name="cmac-key-type" checked="checked"><label for="cmac-key-type">Hex encoded <sup>2</sup></label>
   </div>
   <div>
-    <input id="cmac-key" class="max256bit" type="text" name="cmac-key">
+    <input id="cmac-key" class="max256bit" type="text" name="cmac-key" value="2b7e151628aed2a6abf7158809cf4f3c">
   </div>
 </div>
 
@@ -70,128 +70,12 @@
     <label for="cmac-result">Result (Hex encoded):</label>
   </div>
   <div>
-    <input id="cmac-result" class="max128bit" type="text" name="cmac-result">
+    <textarea id="cmac-result" class="message" type="text" name="cmac-result"></textarea>
   </div>
 </div>
 
 <div class="separator">&nbsp;</div>
 
-<h3><a id="siv-calculator" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Online AES-SIV calculator</h3>
-
-<p>AES-SIV is a mode of operation for authenticated encryption with additional data (AEAD) with AES as the base encryption primitive</p>
-
-<div class="input-block">
-  <div>
-    <label for="siv-input">Input (Plaintext / Ciphertext):</label> <input id="siv-input-type" type="checkbox" name="siv-input-type"><label for="siv-input-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div>
-    <textarea id="siv-input" class="message" type="text" name="siv-input"></textarea>
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <label for="siv-key">Key <sup>3</sup>:</label> <input id="siv-key-type" type="checkbox" name="siv-key-type" checked="checked"><label for="siv-key-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div>
-    <input id="siv-key" class="max512bit" type="text" name="siv-key">
-  </div>
-</div>
-
-<div class="input-block">
-  <div id="siv-ad-title" class="hidden">
-    <label for="siv-input">Associated Data:</label> <input id="siv-ad-type" type="checkbox" name="siv-ad-type" checked="checked"><label for="siv-ad-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div id="siv-ad-list"></div>
-  <div>
-    <a id="siv-ad-add" href="#">add associated data</a>
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <button id="siv-enc">Encrypt</button> <button id="siv-dec">Decrypt</button>
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <label for="siv-result">Result (Hex encoded):</label>
-  </div>
-  <div>
-    <textarea id="siv-result" class="message" type="text" name="siv-result"> </textarea>
-  </div>
-</div>
-
-<div class="separator">&nbsp;</div>
-
-<h3><a id="eax-calculator" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Online AES-EAX calculator</h3>
-
-<p>AES-EAX is a mode of operation for authenticated encryption with additional data (AEAD) based on AES as the base encryption primitive and AES-CMAC</p>
-
-<div class="input-block">
-  <div>
-    <label for="eax-input">Input (Plaintext / Ciphertext):</label> <input id="eax-input-type" type="checkbox" name="eax-input-type"><label for="eax-input-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div>
-    <textarea id="eax-input" class="message" type="text" name="eax-input"></textarea>
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <label for="eax-key">Key <sup>1</sup>:</label> <input id="eax-key-type" type="checkbox" name="eax-key-type" checked="checked"><label for="eax-key-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div>
-    <input id="eax-key" class="max256bit" type="text" name="eax-key">
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <label for="eax-nonce">Nonce:</label> <input id="eax-nonce-type" type="checkbox" name="eax-nonce-type" checked="checked"><label for="eax-nonce-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div>
-    <input id="eax-nonce" class="max128bit" type="text" name="eax-nonce">
-  </div>
-</div>
-
-<div class="input-block">
-  <div id="eax-ad-title" class="hidden">
-    <label for="eax-input">Associated Data:</label> <input id="eax-ad-type" type="checkbox" name="eax-ad-type" checked="checked"><label for="eax-ad-type">Hex encoded <sup>2</sup></label>
-  </div>
-  <div id="eax-ad-list"></div>
-  <div>
-    <a id="eax-ad-add" href="#">add associated data</a>
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <button id="eax-enc">Encrypt</button> <button id="eax-dec">Decrypt</button>
-  </div>
-</div>
-
-<div class="input-block">
-  <div>
-    <label for="eax-result">Result (Hex encoded):</label>
-  </div>
-  <div>
-    <textarea id="eax-result" class="message" type="text" name="eax-result"> </textarea>
-  </div>
-</div>
-
-<div id="notes" class="input-block">
-  <div>
-    <sup>1</sup> The key can be 128-bit, 192-bit or 256-bit long. If the key is shorter, then it is automatically padded up to the next valid size using 0x00 bytes.
-  </div>
-  <div>
-    <sup>2</sup> If the box is not checked it will be assumed that the data is a UTF-8 string.
-  </div>
-  <div>
-    <sup>3</sup> The key can be 256-bit, 384-bit or 512-bit long. It's split into two equal-sized chunks. The first half is used for the authentication tag and the second half for encryption.
-  </div>
-</div>
         </section>
 
         <footer>
